# hfpapers-crawler

./: .env.template  .gitignore  AGENTS.md  DEPLOY.md  LICENSE  PLAN.md  README.md  ROADMAP.md  cli.py  config.yaml  config.yaml.example  env.template  pyproject.toml  run.sh  scrapy.cfg
.hermes/plans/: 2026-05-13_hfpclawer-iteration-roadmap.md  2026-05-13_integration-plan.md  2026-05-20_citation-audit-phase2-ars.md  opencode-sdk-python-survey.md
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  DEVELOPMENT.md  DISTRIBUTED.md  DOCKER.md  NETWORK.md  USAGE.md  kaggle-metadata.md  paper_store.md
docs/cn/: ARCHITECTURE.zh-CN.md  DEVELOPMENT.zh-CN.md  DISTRIBUTED.zh-CN.md  DOCKER.zh-CN.md  NETWORK.zh-CN.md  README.zh-CN.md  USAGE.zh-CN.md  kaggle-metadata.zh-CN.md  paper_store.zh-CN.md
docs/plans/: arxiv-local-search.md  bulk-crawl-plan.md  tests-and-pypi.md
examples/: hermes_agent_demo.md  usage_demo.py
hfpapers/: __init__.py  arxiv_search.py  cli.py  code_matcher.py  config.py  download_queue.py  enrich_entities.py  evolved.py  fix_entity_map.py  graceful.py  hardware.py  items.py  logger.py  mcp_server.py  middlewares.py  paper_store.py  pdf_downloader_async.py  pipelines.py  search_queue.py  searcher_registry.py  semantic_service.py  settings.py  settings_redis.py  sources.py
hfpapers/searchers/: __init__.py  europepmc.py  semanticscholar.py
hfpapers/spiders/: hfspider.py  multi_source_spider.py
hfpclawer/: __init__.py  _text_similarity.py  audit.py  citation_audit.py  citation_audit_oa.py  citation_audit_s2.py
hfpclawer/download/: __init__.py  base.py  kaggle.py  monitor.py  oai.py  resume.py
requirements/: requirements_all_0.1.3.txt  requirements_core.txt  requirements_dev.txt
scripts/: download_arxiv_oai.py  fix_failed_reason.py  publish.sh  run_batch_full.py
skills/hfpclawer-academic-integrity/: SKILL.md
skills/hfpclawer-citation-audit/: SKILL.md
skills/hfpclawer-paper-search/: SKILL.md
tests/: conftest.py  test_audit.py  test_citation_audit.py  test_citation_audit_oa.py  test_citation_audit_s2.py  test_cli.py  test_config.py  test_evolved.py  test_hardware.py  test_integration.py  test_paper_store.py  test_searchers_cns.py  test_semantic_service.py  test_sources.py  test_text_similarity.py
tests/e2e/: install_test.sh  test_mcp_stdio.sh
