[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hfpclawer"
version = "0.4.9"
description = "Multi-source academic paper clawler for PDE/neural operator/physics-informed ML — OAI-PMH download + PDF download + SQLite paper_store + Cross-Ref + MCP server"
authors = [
    {name = "Li Shen"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pdf", "clawler", "snowflake", "crossref", "scrapy", "pytorch", "arxiv", "neural-operator", "paper-store"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/diamond2nv/hfpapers-crawler"
Repository = "https://github.com/diamond2nv/hfpapers-crawler"
Documentation = "https://github.com/diamond2nv/hfpapers-crawler"

[project.optional-dependencies]
llm = [
    "litellm",
]
pdf = [
    "pymupdf4llm",
]
scrapy = [
    "scrapy>=2.10",
    "scrapy-redis",
]
dev = [
    "hfpclawer[scrapy]",
    "hfpclawer[llm]",
    "hfpclawer[pdf]",
    "ruff",
    "pyright",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]
arxiv = [
    "arxiv-metadata-service @ git+https://github.com/diamond2nv/arxiv-metadata-service.git@v0.2.0",
]
[project.scripts]
hfpclawer = "hfpapers.cli:app"

[tool.setuptools.packages.find]
include = ["hfpapers*", "hfpclawer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
markers = [
    "slow: marks tests as slow (e.g. venv creation + pip install), deselected by default",
]

[tool.coverage.run]
source = ["hfpapers"]
omit = ["hfpapers/tests/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def main().*:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
ignore = ["E501"]
